Remove state and params from requiring to be analyzed in Elasticsearch

--- a/x-pack/plugins/task_manager/server/saved_objects/mappings.json
+++ b/x-pack/plugins/task_manager/server/saved_objects/mappings.json
@@ -33,10 +33,12 @@
         "type": "text"
       },
       "params": {
-        "type": "text"
+        "type": "object",
+        "enabled": false
       },
       "state": {
-        "type": "text"
+        "type": "object",
+        "enabled": false
       },
       "user": {
         "type": "keyword"
