--- a/package.json
+++ b/package.json
@@ -199,10 +199,12 @@
     "@turf/distance": "6.0.1",
     "@turf/helpers": "6.0.1",
     "@turf/length": "^6.0.2",
+    "@types/amqplib": "^0.8.2",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/moment-duration-format": "^2.2.3",
     "JSONStream": "1.3.5",
     "abort-controller": "^3.0.0",
+    "amqplib": "^0.8.0",
     "antlr4ts": "^0.5.0-alpha.3",
     "archiver": "^5.2.0",
     "axios": "^0.21.1",
